prevent horizontal scroll

--- a/src/Index.module.scss
+++ b/src/Index.module.scss
@@ -17,6 +17,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
+  overflow-x: hidden;
   font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
